디자인 수정 작업 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieStudyApp">
-        <activity android:name=".MovieDetailActivity" android:exported="true"/>
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity android:name=".IntroActivity" android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MovieDetailActivity" android:exported="true"/>
+        <activity android:name=".MainActivity" android:exported="true"/>
     </application>
 
 </manifest>
