--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding = true
     }
 }
 
@@ -85,6 +86,9 @@ dependencies {
 
     // ScaleRatingBar
     implementation 'com.github.ome450901:SimpleRatingBar:1.5.1'
+
+    // TransformationLayout
+    implementation "com.github.skydoves:transformationlayout:1.1.0"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
